I removed the justify-content as it was space between the search bars hence causing issues on the smaller devices, i then added gap between the comparison stuff

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ nav {
   color: #f5f5f5;
   padding: 10px 30px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -100,9 +99,9 @@ h2 {
 .leaderboard-filters,
 .channel-comparison form {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  margin-right: 25px;
+  margin-bottom: 5px;
+  margin-right: 10px;
+  gap: 40px;
 }
 
 .leaderboard-filters input[type="text"] {
